Chat room link overlapping fix and selection color change

--- a/src/sass/_chat.scss
+++ b/src/sass/_chat.scss
@@ -402,6 +402,7 @@
             border: 1px #695D3F solid;
             background: #272213;
             padding: 0px 5px;
+            font-size: small;
             transition: all .25s ease-in-out;
             &:hover {
               background-color: #584C2B;
